--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-step-wizard": "^5.3.9",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
